chore: add .gitignore and remove __pycache__ from tracking
- Added .gitignore to ignore Python cache files
- Removed __pycache__ directories from git tracking
- Preparing for 18.0 branch structure

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,20 @@ dmypy.json
 # OS
 .DS_Store
 Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
